--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,11 +1,7 @@
 name: openai-mcp
+
 services:
-  - name: api
-    source:
-      type: dockerfile
-    environment:
-      - name: OPENAI_API_KEY
-        value: ${OPENAI_API_KEY}
-    ports:
-      - port: 8080
-        public: true
+  api:
+    port: 8080
+    env:
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
