--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
   "name": "openai-mcp",
   "version": "1.0.0",
-  "description": "Smithery-compatible OpenAI Model Connection Proxy",
+  "description": "OpenAI Model Connection Proxy for Smithery",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "start:stdio": "SMITHERY_STDIO_MODE=true node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "openai",
-    "proxy",
-    "api",
-    "claude",
+    "mcp",
     "smithery",
-    "mcp"
+    "jsonrpc"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "openai": "^4.24.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
   }
 }
