--- a/smithery.yaml
+++ b/smithery.yaml
@@ -16,3 +16,8 @@ startCommand:
         "OPENAI_API_KEY": process.env.OPENAI_API_KEY || ""
       }
     })
+
+# Optional build configuration
+build:
+  dockerfile: "./Dockerfile"
+  dockerBuildPath: "."
